[gd_scene load_steps=6 format=3 uid="uid://b8qx7dxr6nxjw"]

[ext_resource type="PackedScene" uid="uid://c68d08h8j67g6" path="res://animations.tscn" id="1_anims"]
[ext_resource type="Script" path="res://player_controller.gd" id="2_player"]
[ext_resource type="Script" path="res://camera_controller.gd" id="3_camera"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_capsule"]
albedo_color = Color(0.2, 0.4, 0.8, 0.5)
transparency = 1

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
script = ExtResource("2_player")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="CameraRig" type="Node3D" parent="."]
script = ExtResource("3_camera")

[node name="SpringArm3D" type="SpringArm3D" parent="CameraRig"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 0, 0)
collision_mask = 1
spring_length = 5.0
margin = 0.2

[node name="Camera3D" type="Camera3D" parent="CameraRig/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
current = true
fov = 70.0

[node name="CharacterModel" parent="." instance=ExtResource("1_anims")]
transform = Transform3D(0.01, 0, 0, 0, 0.01, 0, 0, 0, 0.01, 0, 0, 0)

[node name="UncrouchRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
target_position = Vector3(0, 1.5, 0)
collision_mask = 1
enabled = true
